--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,30 @@
     <title>Shop Safe Marin</title>
   </head>
   <body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyD4t9Ui8Tm2KsMxE0lhUBH_yk4jnLfw06g",
+        authDomain: "shop-safe-marin.firebaseapp.com",
+        databaseURL: "https://shop-safe-marin.firebaseio.com",
+        projectId: "shop-safe-marin",
+        storageBucket: "shop-safe-marin.appspot.com",
+        messagingSenderId: "104700287434",
+        appId: "1:104700287434:web:48a7d6002f8d49b6e35733",
+        measurementId: "G-6CGWFHY9B4"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,5 +64,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
