Added meta tags for linkedin thumbnail

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -10,6 +10,11 @@
       name="description"
       content="A single source of health and safety information on grocery stores located in Marin County."
     />
+    <meta property="og:title" content="Shop Safe Marin" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/shopsafemarinthumbnail.png">
+    <meta name="author" content="Morgan Trotter" />
+    <meta property="og:description" content="A single source of health and safety reviews for grocery stores in Marin County" />
+    <meta property="og:url" content="http://shopsafemarin-env.eba-vjj6mcnm.us-east-2.elasticbeanstalk.com/#/home" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
