--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="A single source of health and safety information on grocery stores located in Marin County."
     />
     <meta property="og:title" content="Shop Safe Marin" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/shopsafemarinthumbnail.png">
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/shopsafemarinthumbnail.png" />
     <meta name="author" content="Morgan Trotter" />
     <meta property="og:description" content="A single source of health and safety reviews for grocery stores in Marin County" />
     <meta property="og:url" content="http://shopsafemarin-env.eba-vjj6mcnm.us-east-2.elasticbeanstalk.com/#/home" />
